--- a/public/products/002.html
+++ b/public/products/002.html
@@ -21,15 +21,16 @@
   <!-- responsive style -->
   <link href="/css/responsive.css" rel="stylesheet" />
   <script>
-    window.digitalData = {"page":"product","products":[{"image":"p2.png","color":"black","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"long-sleeve","cat3Name":"Long Sleeve","name":"Multistack Everyday Shirt","price":65,"rating":3,"url":"products/002.html","id":"4002"}]};
+    window.digitalData = {"page":"product","product":{"image":"p2.png","color":"black","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"long-sleeve","cat3Name":"Long Sleeve","name":"Multistack Everyday Shirt","price":65,"rating":3,"url":"products/002.html","id":"4002"},"products":[{"image":"p2.png","color":"black","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"long-sleeve","cat3Name":"Long Sleeve","name":"Multistack Everyday Shirt","price":65,"rating":3,"url":"products/002.html","id":"4002"}]};
   </script>
   </script>
   <script>
     (function () {
-      window.defaultTagsLibrary = "https://assets.adobedtm.com/1281f6ff0c59/8b3a8c47023b/launch-0e70c8f03fb0-development.min.js";
+      window.defaultTagsLibrary = "<scr" + "ipt src=\"https://assets.adobedtm.com/22bf1a13013f/af8b0c15e5e5/launch-71eb7cb6afd7-development.min.js\" async></scr" + "ipt>";
       const tagsLibrary = window.localStorage.getItem("tagsLibrary") || window.defaultTagsLibrary;
+      const url = /src="([^"]+)"/.exec(tagsLibrary)[1];
       const tagsScript = document.createElement("script");
-      tagsScript.src = tagsLibrary;
+      tagsScript.src = url;
       tagsScript.async = true;
       document.head.appendChild(tagsScript);
     })();
@@ -183,7 +184,7 @@
           <div class="box">
             <div class="option_container">
               <div class="options">
-                <a href="/cart.html" class="addToCart" data-product-index="0">
+                <a href="#" class="addToCart" data-product-index="0">
                   Add to Cart
                 </a>
               </div>
