--- a/public/success.html
+++ b/public/success.html
@@ -26,10 +26,11 @@
   </script>
   <script>
     (function () {
-      window.defaultTagsLibrary = "https://assets.adobedtm.com/1281f6ff0c59/8b3a8c47023b/launch-0e70c8f03fb0-development.min.js";
+      window.defaultTagsLibrary = "<scr" + "ipt src=\"https://assets.adobedtm.com/22bf1a13013f/af8b0c15e5e5/launch-71eb7cb6afd7-development.min.js\" async></scr" + "ipt>";
       const tagsLibrary = window.localStorage.getItem("tagsLibrary") || window.defaultTagsLibrary;
+      const url = /src="([^"]+)"/.exec(tagsLibrary)[1];
       const tagsScript = document.createElement("script");
-      tagsScript.src = tagsLibrary;
+      tagsScript.src = url;
       tagsScript.async = true;
       document.head.appendChild(tagsScript);
     })();
