Add built files

--- a/public/cart.html
+++ b/public/cart.html
@@ -195,7 +195,7 @@
           </tr>
       </table>
       <button data-section="checkout" type="button" class="cart-nav btn btn-primary">Checkout</button>
-      <button data-section="clear-cart" type="button" class="cart-nav btn btn-primary clear-cart">Remove All</button>
+      <button data-section="clear-cart" type="button" class="cart-nav btn btn-primary clear-cart">Clear Cart</button>
     </div>
   </section>
   <section class="empty_section layout_padding">
