Link to all product from Hero CTA

--- a/public/index.html
+++ b/public/index.html
@@ -215,7 +215,7 @@
                       delectus repellat modi impedit sequi.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="https://adobesummit24.com/categories/all.html" class="btn1">
                         Shop Now
                       </a>
                     </div>
