--- a/public/products/005.html
+++ b/public/products/005.html
@@ -23,38 +23,39 @@
   <script>
     window.digitalData = {"page":"product","product":{"image":"p5.png","color":"black","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"pockets","cat3Name":"Pockets","name":"Coopertown Black Velvet Pocket Dress","price":26.99,"rating":3,"url":"products/005.html","id":"4005"},"products":[{"image":"p5.png","color":"black","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"pockets","cat3Name":"Pockets","name":"Coopertown Black Velvet Pocket Dress","price":26.99,"rating":3,"url":"products/005.html","id":"4005"}]};
   </script>
-  </script>
   <script>
-    // Target prehiding snippet.
-    ;(function(win, doc, style, timeout) {
-      var STYLE_ID = 'at-body-style';
-      function getParent() {
-        return doc.getElementsByTagName('head')[0];
+    // Modified Web SDK prehiding snippet to work for both target and web sdk. (Assuming only one is active at a time.)
+    !function (e, a, n, t) {
+      var i = e.head;
+
+      if (i) {
+        if (a) return;
+        var x = e.createElement("style");
+        x.id = "alloy-prehiding";
+        x.innerText = n;
+        i.appendChild(x);
+
+        var y = e.createElement("style");
+        y.id = "at-body-style";
+        y.innerText = n;
+        i.appendChild(y);
+
+        setTimeout(function () {
+          x.parentNode && x.parentNode.removeChild(x) ||
+            y.parentNode && y.parentNode.removeChild(y);
+        }, t);
+
+        // When x or y is removed, remove the other.
+        new MutationObserver(function () {
+          if (!x.parentNode || !y.parentNode) {
+            x.parentNode && x.parentNode.removeChild(x) ||
+              y.parentNode && y.parentNode.removeChild(y);
+            this.disconnect();
+          }
+        }).observe(i, { childList: true });
       }
-      function addStyle(parent, id, def) {
-        if (!parent) {
-          return;
-        }
-        var style = doc.createElement('style');
-        style.id = id;
-        style.innerHTML = def;
-        parent.appendChild(style);
-      }
-      function removeStyle(parent, id) {
-        if (!parent) {
-          return;
-        }
-        var style = doc.getElementById(id);
-        if (!style) {
-          return;
-        }
-        parent.removeChild(style);
-      }
-      addStyle(getParent(), STYLE_ID, style);
-      setTimeout(function() {
-        removeStyle(getParent(), STYLE_ID);
-      }, timeout);
-    }(window, document, "#customCarousel1 {opacity: 0 !important}", 3000));
+    }(document, document.location.href.indexOf("adobe_authoring_enabled") !== -1, "body { opacity: 0 !important }", 3000);
+
 
     (function () {
       window.defaultTagsLibrary = "<scr" + "ipt src=\"https://assets.adobedtm.com/22bf1a13013f/af8b0c15e5e5/launch-71eb7cb6afd7-development.min.js\" async></scr" + "ipt>";
