--- a/public/products/004.html
+++ b/public/products/004.html
@@ -20,6 +20,11 @@
   <link href="/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="/css/responsive.css" rel="stylesheet" />
+  <!-- Preconnects -->
+  <link rel="preconnect" href="https://assets.adobedtm.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://experienceedgeearlya.tt.omtrdc.net" />
+  <link rel="preconnect" href="https://edge.adobedc.net" />
   <script>
     window.digitalData = {"page":"product","product":{"image":"p4.png","color":"red","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"sleeveless","cat3Name":"Sleeveless","name":"Sweetheart Sleeveless Short Tulle Homecoming Dress","price":99,"rating":4,"url":"products/004.html","id":"4004"},"products":[{"image":"p4.png","color":"red","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"sleeveless","cat3Name":"Sleeveless","name":"Sweetheart Sleeveless Short Tulle Homecoming Dress","price":99,"rating":4,"url":"products/004.html","id":"4004"}]};
   </script>
