--- a/public/products/011.html
+++ b/public/products/011.html
@@ -20,6 +20,11 @@
   <link href="/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="/css/responsive.css" rel="stylesheet" />
+  <!-- Preconnects -->
+  <link rel="preconnect" href="https://assets.adobedtm.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://experienceedgeearlya.tt.omtrdc.net" />
+  <link rel="preconnect" href="https://edge.adobedc.net" />
   <script>
     window.digitalData = {"page":"product","product":{"image":"p11.png","color":"green","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"short-sleeve","cat3Name":"Short Sleeve","name":"Classic Plaid Pattern Men's Stylish Short Sleeve Button Up, Summer Holiday Shirt","price":"12.49","rating":3,"url":"products/011.html","id":"4011"},"products":[{"image":"p11.png","color":"green","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"short-sleeve","cat3Name":"Short Sleeve","name":"Classic Plaid Pattern Men's Stylish Short Sleeve Button Up, Summer Holiday Shirt","price":"12.49","rating":3,"url":"products/011.html","id":"4011"}]};
   </script>
