--- a/public/products/012.html
+++ b/public/products/012.html
@@ -20,6 +20,11 @@
   <link href="/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="/css/responsive.css" rel="stylesheet" />
+  <!-- Preconnects -->
+  <link rel="preconnect" href="https://assets.adobedtm.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://experienceedgeearlya.tt.omtrdc.net" />
+  <link rel="preconnect" href="https://edge.adobedc.net" />
   <script>
     window.digitalData = {"page":"product","product":{"image":"p12.png","color":"purple","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"strapless","cat3Name":"Strapless","name":"Star Print Strapless Gown For Spring & Summer","price":99.79,"rating":5,"url":"products/012.html","id":"4012"},"products":[{"image":"p12.png","color":"purple","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"strapless","cat3Name":"Strapless","name":"Star Print Strapless Gown For Spring & Summer","price":99.79,"rating":5,"url":"products/012.html","id":"4012"}]};
   </script>
