--- a/public/products/003.html
+++ b/public/products/003.html
@@ -20,6 +20,11 @@
   <link href="/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="/css/responsive.css" rel="stylesheet" />
+  <!-- Preconnects -->
+  <link rel="preconnect" href="https://assets.adobedtm.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://experienceedgeearlya.tt.omtrdc.net" />
+  <link rel="preconnect" href="https://edge.adobedc.net" />
   <script>
     window.digitalData = {"page":"product","product":{"image":"p3.png","color":"violet","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"strapless","cat3Name":"Strapless","name":"A-Line Strapless Chiffon Floor-Length Dress","price":109.99,"rating":5,"url":"products/003.html","id":"4003"},"products":[{"image":"p3.png","color":"violet","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"strapless","cat3Name":"Strapless","name":"A-Line Strapless Chiffon Floor-Length Dress","price":109.99,"rating":5,"url":"products/003.html","id":"4003"}]};
   </script>
