--- a/public/products/007.html
+++ b/public/products/007.html
@@ -20,6 +20,11 @@
   <link href="/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="/css/responsive.css" rel="stylesheet" />
+  <!-- Preconnects -->
+  <link rel="preconnect" href="https://assets.adobedtm.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://experienceedgeearlya.tt.omtrdc.net" />
+  <link rel="preconnect" href="https://edge.adobedc.net" />
   <script>
     window.digitalData = {"page":"product","product":{"image":"p7.png","color":"black","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"strapless","cat3Name":"Strapless","name":"Strapless Neckline Gown","price":299.99,"rating":5,"url":"products/007.html","id":"4007"},"products":[{"image":"p7.png","color":"black","cat1Tag":"womens","cat1Name":"Women's","cat2Tag":"dress","cat2Name":"Dress","cat3Tag":"strapless","cat3Name":"Strapless","name":"Strapless Neckline Gown","price":299.99,"rating":5,"url":"products/007.html","id":"4007"}]};
   </script>
