--- a/public/products/010.html
+++ b/public/products/010.html
@@ -20,6 +20,11 @@
   <link href="/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="/css/responsive.css" rel="stylesheet" />
+  <!-- Preconnects -->
+  <link rel="preconnect" href="https://assets.adobedtm.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://experienceedgeearlya.tt.omtrdc.net" />
+  <link rel="preconnect" href="https://edge.adobedc.net" />
   <script>
     window.digitalData = {"page":"product","product":{"image":"p10.png","color":"green","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"long-sleeve","cat3Name":"Long Sleeve","name":"B Fresh, Elegant Western Cowboy","price":"69.99","rating":4,"url":"products/010.html","id":"4010"},"products":[{"image":"p10.png","color":"green","cat1Tag":"mens","cat1Name":"Men's","cat2Tag":"shirts","cat2Name":"Shirts","cat3Tag":"long-sleeve","cat3Name":"Long Sleeve","name":"B Fresh, Elegant Western Cowboy","price":"69.99","rating":4,"url":"products/010.html","id":"4010"}]};
   </script>
