Lazy load images.

--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
     <!-- slider section -->
     <section class="slider_section ">
       <div class="slider_bg_box">
-        <img src="images/slider-bg.jpg" alt="">
+        <img src="images/slider-bg.jpg" loading="lazy" alt="">
       </div>
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -258,7 +258,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p1.png" alt="">
+              <img src="images/p1.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -283,7 +283,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p2.png" alt="">
+              <img src="images/p2.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -308,7 +308,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p3.png" alt="">
+              <img src="images/p3.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -333,7 +333,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p4.png" alt="">
+              <img src="images/p4.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -358,7 +358,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p5.png" alt="">
+              <img src="images/p5.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -383,7 +383,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p6.png" alt="">
+              <img src="images/p6.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -429,6 +429,7 @@
     </div>
   </section>
   <!-- end subscribe section -->
+  
   <!-- client section -->
   <section class="client_section layout_padding">
     <div class="container">
@@ -444,55 +445,7 @@
               <div class="img_container">
                 <div class="img-box">
                   <div class="img_box-inner">
-                    <img src="images/client.jpg" alt="">
-                  </div>
-                </div>
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Anna Trevor
-                </h5>
-                <h6>
-                  Customer
-                </h6>
-                <p>
-                  Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit,
-                  et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus
-                  accusantium sapiente nam! Quaerat.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="box col-lg-10 mx-auto">
-              <div class="img_container">
-                <div class="img-box">
-                  <div class="img_box-inner">
-                    <img src="images/client.jpg" alt="">
-                  </div>
-                </div>
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Anna Trevor
-                </h5>
-                <h6>
-                  Customer
-                </h6>
-                <p>
-                  Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit,
-                  et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus
-                  accusantium sapiente nam! Quaerat.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="box col-lg-10 mx-auto">
-              <div class="img_container">
-                <div class="img-box">
-                  <div class="img_box-inner">
-                    <img src="images/client.jpg" alt="">
+                    <img src="images/client.jpg" loading="lazy" alt="">
                   </div>
                 </div>
               </div>
@@ -526,6 +479,7 @@
     </div>
   </section>
   <!-- end client section -->
+  
   <!-- footer start -->
   <footer>
     <div class="container">
