--- a/public/index.html
+++ b/public/index.html
@@ -457,8 +457,8 @@
                   <div class="widget_menu">
                     <h3>Account</h3>
                     <ul>
-                      <li><a href="#">Account</a></li>
-                      <li><a href="#">Checkout</a></li>
+                      <li><a href="/workbook.pdf">Workbook</a></li>
+                      <li><a href="/Data-JSON">JSON</a></li>
                       <li><a href="#">Login</a></li>
                       <li><a href="#">Register</a></li>
                       <li><a href="#">Shopping</a></li>
