Update button links.

--- a/public/index.html
+++ b/public/index.html
@@ -457,7 +457,7 @@
                   <div class="widget_menu">
                     <h3>Account</h3>
                     <ul>
-                      <li><a href="/workbook.pdf">Workbook</a></li>
+                      <li><a href="/workbook.pdf" download>Workbook</a></li>
                       <li><a href="/Data-JSON" target="_blank">JSON</a></li>
                       <li><a href="#">Login</a></li>
                       <li><a href="#">Register</a></li>
