Update JSON file

--- a/public/index.html
+++ b/public/index.html
@@ -458,7 +458,7 @@
                     <h3>Account</h3>
                     <ul>
                       <li><a href="/workbook.pdf" download>Workbook</a></li>
-                      <li><a href="/Data-JSON" target="_blank">JSON</a></li>
+                      <li><a href="/Data-JSON">JSON</a></li>
                       <li><a href="#">Login</a></li>
                       <li><a href="#">Register</a></li>
                       <li><a href="#">Shopping</a></li>
