--- a/public/index.html
+++ b/public/index.html
@@ -467,8 +467,8 @@
                   <div class="widget_menu">
                     <h3>Menu</h3>
                     <ul>
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
+                      <li><a id="debugOn" href="#">Debug on</a></li>
+                      <li><a id="clearAJOStorage" href="#">Clear AJO storage</a></li>
                       <li><a href="#">Services</a></li>
                       <li><a href="#">Testimonial</a></li>
                       <li><a href="#">Blog</a></li>
